[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A tiny package for the Python piscine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "hanieh", email = "hankhali@student.42abudhabi.ae" }
]
license = { text = "MIT" }
home-page = "https://github.com/hanieh/ft_package"
